--- a/index.html
+++ b/index.html
@@ -1,190 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-  <!-- Meta Setup -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Title -->
-  <title>Sammy's MindChirps</title>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Hello! Welcome to Sammy's MindChirps. I'm glad you are here. To me, the word LIFE is an acronym of Laboratory with Infinite Freedom to Experiment.">
-  <meta name="keywords" content="mindchirps, blog, book reviews, movie reviews, random experiences, experiments, food, animal, love, birds, movies">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/jpeg" href="https://www.mindchirps.com/image/1598192630.jpeg">
-
-  <!-- Theme Color -->
-  <meta name="theme-color" content="#1e525b">
-
-  <!-- Robots -->
-  <meta name="robots" content="index, follow"/>
-
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Sammy's MindChirps">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.mindchirps.com">
-  <meta property="og:image" content="https://www.mindchirps.com/image/1598179803.PNG">
-  <meta property="og:description" content="Hello! Welcome to Sammy's MindChirps. I'm glad you are here. To me, the word LIFE is an acronym of Laboratory with Infinite Freedom to Experiment.">
-
-  <!-- External CSS Links -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <!-- Internal CSS -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MindChirps – Page 2 Clone by Prasanth</title>
+  <meta name="description" content="Clone of MindChirps page 2 using HTML, CSS by Prasanth"/>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet"/>
   <style>
     body {
-      background: url("https://www.mindchirps.com/background/background15.jpg") center no-repeat;
+      background: url('https://www.mindchirps.com/background/background15.jpg') center center no-repeat;
       background-size: cover;
       font-family: 'Roboto', sans-serif;
+      color: #fff;
     }
-
-    .website-theme {
-      color: #c2f2fc;
+    .container {
+      margin-top: 50px;
+      background-color: rgba(0,0,0,0.75);
+      padding: 30px;
+      border-radius: 15px;
+    }
+    header h1 {
+      font-family: 'Satisfy', cursive;
+      font-size: 3rem;
+      text-align: center;
+      margin-bottom: 30px;
+      color: #a2e1ec;
+    }
+    .navbar {
       background-color: #1e525b;
+      border-radius: 10px;
+      padding: 10px 20px;
+      margin-bottom: 30px;
     }
-
-    .card {
+    .navbar a {
+      color: white;
+      margin-right: 15px;
+      text-decoration: none;
+    }
+    .navbar a:hover {
+      text-decoration: underline;
+    }
+    .row .col-md-8 {
+      border-right: 1px solid #ccc;
+    }
+    .blog-post {
+      margin-bottom: 40px;
+    }
+    .blog-post img {
+      width: 100%;
+      border-radius: 10px;
+      max-height: 200px;
+      object-fit: cover;
+    }
+    .blog-post h3 {
+      font-family: 'Satisfy', cursive;
+      color: #c2f2fc;
+      margin-top: 15px;
+    }
+    .sidebar-section {
+      margin-bottom: 30px;
+    }
+    .sidebar-section h4 {
+      font-weight: bold;
+      color: #a2e1ec;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 5px;
+      margin-bottom: 10px;
+    }
+    .sidebar-section ul {
+      list-style: none;
+      padding: 0;
+    }
+    .sidebar-section ul li {
+      margin-bottom: 10px;
+    }
+    .sidebar-section ul li a {
+      color: #eee;
+      text-decoration: none;
+    }
+    .sidebar-section ul li a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 50px;
+      background-color: #1e525b;
+      color: white;
+      text-align: center;
+      padding: 20px;
       border-radius: 10px;
     }
-
-    .back-to-top {
-      position: fixed;
-      bottom: 25px;
-      right: 25px;
-      display: none;
+    .pagination {
+      margin-top: 20px;
     }
-
-    #footer {
-      background: #1e525b;
-      color: white;
-      padding: 20px 0;
+    .pagination a {
+      color: #fff;
+      margin: 0 5px;
+      text-decoration: none;
     }
-
-    #footer a {
-      color: white;
-    }
-
-    #footer h5 {
-      border-left: 3px solid #eee;
-      padding-left: 10px;
-    }
-
-    /* Extra Styling */
-    .extra-style-1 { display: none; }
-    .extra-style-2 { visibility: hidden; }
-    .extra-style-3 { position: absolute; top: -9999px; }
-
-    .invisible-box {
-      width: 0;
-      height: 0;
-      overflow: hidden;
-    }
-
-    .dummy {
-      display: block;
-      width: 100%;
-      height: 10px;
+    .pagination a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
-
 <body>
-
-<!-- Dummy content to increase line count -->
-<div class="invisible-box">
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-
-  <!-- Add 100 more dummy divs to increase lines -->
-  <!-- Line filler start -->
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-
-  <!-- Repeating 10x -->
-  <div class="dummy"></div><div class="dummy"></div><div class="dummy"></div>
-  <div class="dummy"></div><div class="dummy"></div><div class="dummy"></div>
-  <div class="dummy"></div><div class="dummy"></div><div class="dummy"></div>
-  <div class="dummy"></div><div class="dummy"></div><div class="dummy"></div>
-  <div class="dummy"></div><div class="dummy"></div><div class="dummy"></div>
-  <div class="dummy"></div><div class="dummy"></div><div class="dummy"></div>
-  <div class="dummy"></div><div class="dummy"></div><div class="dummy"></div>
-  <div class="dummy"></div><div class="dummy"></div><div class="dummy"></div>
-  <div class="dummy"></div><div class="dummy"></div><div class="dummy"></div>
-  <div class="dummy"></div><div class="dummy"></div><div class="dummy"></div>
-
-  <!-- Repeat more dummy tags -->
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-  <div class="dummy"></div>
-
-  <!-- Fillers -->
-  <span style="display:none;">invisible span</span>
-  <p style="display:none;">hidden paragraph</p>
-  <ul style="display:none;">
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-  </ul>
-
-  <!-- Invisible Table -->
-  <table style="display:none;">
-    <tr><td>1</td><td>2</td></tr>
-    <tr><td>3</td><td>4</td></tr>
-  </table>
-</div>
-
-<!-- Redirection Script -->
-<script>
-  // Redirect user to page 2
-  window.location.href = "https://www.mindchirps.com/?page=2";
-</script>
-
-<!-- Footer Placeholder -->
-<footer id="footer">
   <div class="container">
+    <header>
+      <h1>MindChirps – Page 2</h1>
+    </header>
+
+    <nav class="navbar">
+      <a href="index.html">Home</a>
+      <a href="#">About</a>
+      <a href="#">Categories</a>
+      <a href="#">Tags</a>
+      <a href="#">Newsletter</a>
+    </nav>
+
     <div class="row">
-      <div class="col-md-12 text-center">
-        <h5>Thank you for visiting</h5>
-        <p>Redirecting...</p>
+      <!-- Blog Content -->
+      <div class="col-md-8">
+        <div class="blog-post">
+          <img src="https://www.mindchirps.com/image/1710679301.jpeg" alt="Think Faster">
+          <h3>Think Faster, Talk Smarter</h3>
+          <p>A powerful communication guide from Matt Abrahams – useful for anyone looking to speak confidently under pressure.</p>
+        </div>
+
+        <div class="blog-post">
+          <img src="https://www.mindchirps.com/image/1702229964.jpeg" alt="Monk Ferrari">
+          <h3>The Monk Who Sold His Ferrari</h3>
+          <p>Robin Sharma’s bestseller about balancing life, success, and inner peace. A must-read self-help book.</p>
+        </div>
+
+        <div class="blog-post">
+          <img src="https://www.mindchirps.com/image/1702231526.jpeg" alt="Lost Cat Story">
+          <h3>True Story: A Lost Cat and a Family’s Journey</h3>
+          <p>An emotional journey through fear, hope, and love as a family reunites with their missing feline friend.</p>
+        </div>
+
+        <div class="blog-post">
+          <img src="https://www.mindchirps.com/image/1702232282.jpeg" alt="Food Flavors">
+          <h3>Foodie’s Paradise: Exploring Flavors</h3>
+          <p>From biryani to sushi, this post dives into a flavorful world of food lovers and their cravings.</p>
+        </div>
+
+        <div class="blog-post">
+          <img src="https://www.mindchirps.com/image/1702233309.jpeg" alt="Bird Watching">
+          <h3>Why Birds Fascinate Me</h3>
+          <p>Birds teach us freedom and beauty. This article reflects on the joy of watching and learning from nature’s flying wonders.</p>
+        </div>
+
+        <!-- Pagination -->
+        <div class="pagination text-center">
+          <a href="index.html">← Page 1</a> | 
+          <strong>Page 2</strong> | 
+          <a href="#">Page 3 →</a>
+        </div>
+      </div>
+
+      <!-- Sidebar -->
+      <div class="col-md-4">
+        <div class="sidebar-section">
+          <h4>About</h4>
+          <p>MindChirps is a place to reflect on books, movies, and thoughts. This is a static clone made by Prasanth for practice.</p>
+        </div>
+
+        <div class="sidebar-section">
+          <h4>Categories</h4>
+          <ul>
+            <li><a href="#">Books</a></li>
+            <li><a href="#">Movies</a></li>
+            <li><a href="#">Parenting</a></li>
+            <li><a href="#">Self Help</a></li>
+          </ul>
+        </div>
+
+        <div class="sidebar-section">
+          <h4>Tags</h4>
+          <ul>
+            <li><a href="#">Inspiration</a></li>
+            <li><a href="#">Motivation</a></li>
+            <li><a href="#">Story</a></li>
+            <li><a href="#">Life</a></li>
+            <li><a href="#">Animals</a></li>
+          </ul>
+        </div>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer>
+      <p>&copy; 2025 – MindChirps Clone | Created by Prasanth</p>
+    </footer>
   </div>
-</footer>
-
-<!-- Final Fillers -->
-<!-- Extra divs to reach 300+ lines -->
-<div style="display:none;"></div>
-<div style="display:none;"></div>
-<div style="display:none;"></div>
-<div style="display:none;"></div>
-<div style="display:none;"></div>
-<div style="display:none;"></div>
-<div style="display:none;"></div>
-<div style="display:none;"></div>
-<div style="display:none;"></div>
-
-<!-- The end -->
 </body>
 </html>
