--- a/index.html
+++ b/index.html
@@ -1,197 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MindChirps – Page 2 Clone by Prasanth</title>
-  <meta name="description" content="Clone of MindChirps page 2 using HTML, CSS by Prasanth"/>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=Satisfy&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet"/>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sammy's MindChirps Clone</title>
+  <meta name="description" content="MindChirps Blog Clone">
+  <meta name="theme-color" content="#1e525b">
+  <link rel="icon" href="https://www.mindchirps.com/image/1598192630.jpeg" type="image/jpeg">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&family=Satisfy&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     body {
-      background: url('https://www.mindchirps.com/background/background15.jpg') center center no-repeat;
+      background: url('https://www.mindchirps.com/background/background15.jpg') no-repeat center center fixed;
       background-size: cover;
       font-family: 'Roboto', sans-serif;
-      color: #fff;
-    }
-    .container {
-      margin-top: 50px;
-      background-color: rgba(0,0,0,0.75);
-      padding: 30px;
-      border-radius: 15px;
-    }
-    header h1 {
-      font-family: 'Satisfy', cursive;
-      font-size: 3rem;
-      text-align: center;
-      margin-bottom: 30px;
-      color: #a2e1ec;
+      color: #333;
     }
     .navbar {
       background-color: #1e525b;
+    }
+    .navbar-brand, .nav-link, .footer a {
+      color: white !important;
+    }
+    .header-title {
+      font-family: 'Satisfy', cursive;
+      font-size: 3rem;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+    .content {
+      background: rgba(255,255,255,0.95);
+      padding: 30px;
       border-radius: 10px;
-      padding: 10px 20px;
-      margin-bottom: 30px;
-    }
-    .navbar a {
-      color: white;
-      margin-right: 15px;
-      text-decoration: none;
-    }
-    .navbar a:hover {
-      text-decoration: underline;
-    }
-    .row .col-md-8 {
-      border-right: 1px solid #ccc;
     }
     .blog-post {
-      margin-bottom: 40px;
-    }
-    .blog-post img {
-      width: 100%;
-      border-radius: 10px;
-      max-height: 200px;
-      object-fit: cover;
-    }
-    .blog-post h3 {
-      font-family: 'Satisfy', cursive;
-      color: #c2f2fc;
-      margin-top: 15px;
-    }
-    .sidebar-section {
       margin-bottom: 30px;
     }
-    .sidebar-section h4 {
-      font-weight: bold;
-      color: #a2e1ec;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 5px;
-      margin-bottom: 10px;
+    .blog-post img {
+      max-width: 100%;
+      border-radius: 8px;
     }
-    .sidebar-section ul {
-      list-style: none;
-      padding: 0;
+    .blog-post h3 {
+      margin-top: 10px;
     }
-    .sidebar-section ul li {
-      margin-bottom: 10px;
-    }
-    .sidebar-section ul li a {
-      color: #eee;
-      text-decoration: none;
-    }
-    .sidebar-section ul li a:hover {
-      text-decoration: underline;
-    }
-    footer {
-      margin-top: 50px;
-      background-color: #1e525b;
-      color: white;
-      text-align: center;
-      padding: 20px;
-      border-radius: 10px;
-    }
-    .pagination {
+    .sidebar h5 {
       margin-top: 20px;
+      border-bottom: 2px solid #1e525b;
+      padding-bottom: 5px;
     }
-    .pagination a {
-      color: #fff;
-      margin: 0 5px;
-      text-decoration: none;
+    .footer {
+      background: #1e525b;
+      color: white;
+      padding: 20px 0;
+      margin-top: 40px;
     }
-    .pagination a:hover {
-      text-decoration: underline;
+    .tag {
+      display: inline-block;
+      background: #1e525b;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 5px;
+      margin: 3px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>MindChirps – Page 2</h1>
-    </header>
-
-    <nav class="navbar">
-      <a href="index.html">Home</a>
-      <a href="#">About</a>
-      <a href="#">Categories</a>
-      <a href="#">Tags</a>
-      <a href="#">Newsletter</a>
-    </nav>
-
+  <nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="#">MindChirps</a>
+  </nav>
+  <div class="container mt-4 mb-5">
+    <div class="header-title">Welcome to Sammy's MindChirps</div>
     <div class="row">
-      <!-- Blog Content -->
       <div class="col-md-8">
-        <div class="blog-post">
-          <img src="https://www.mindchirps.com/image/1710679301.jpeg" alt="Think Faster">
-          <h3>Think Faster, Talk Smarter</h3>
-          <p>A powerful communication guide from Matt Abrahams – useful for anyone looking to speak confidently under pressure.</p>
-        </div>
-
-        <div class="blog-post">
-          <img src="https://www.mindchirps.com/image/1702229964.jpeg" alt="Monk Ferrari">
-          <h3>The Monk Who Sold His Ferrari</h3>
-          <p>Robin Sharma’s bestseller about balancing life, success, and inner peace. A must-read self-help book.</p>
-        </div>
-
-        <div class="blog-post">
-          <img src="https://www.mindchirps.com/image/1702231526.jpeg" alt="Lost Cat Story">
-          <h3>True Story: A Lost Cat and a Family’s Journey</h3>
-          <p>An emotional journey through fear, hope, and love as a family reunites with their missing feline friend.</p>
-        </div>
-
-        <div class="blog-post">
-          <img src="https://www.mindchirps.com/image/1702232282.jpeg" alt="Food Flavors">
-          <h3>Foodie’s Paradise: Exploring Flavors</h3>
-          <p>From biryani to sushi, this post dives into a flavorful world of food lovers and their cravings.</p>
-        </div>
-
-        <div class="blog-post">
-          <img src="https://www.mindchirps.com/image/1702233309.jpeg" alt="Bird Watching">
-          <h3>Why Birds Fascinate Me</h3>
-          <p>Birds teach us freedom and beauty. This article reflects on the joy of watching and learning from nature’s flying wonders.</p>
-        </div>
-
-        <!-- Pagination -->
-        <div class="pagination text-center">
-          <a href="index.html">← Page 1</a> | 
-          <strong>Page 2</strong> | 
-          <a href="#">Page 3 →</a>
+        <div class="content">
+          <div class="blog-post">
+            <img src="https://www.mindchirps.com/image/1710846152.jpeg" alt="Blog Image">
+            <h3>5 Books That Made Me Reflect</h3>
+            <p>These books touched my mind and soul in different ways. Let me walk you through them and how they influenced my thoughts.</p>
+          </div>
+          <div class="blog-post">
+            <img src="https://www.mindchirps.com/image/1710046152.jpg" alt="Blog Image">
+            <h3>Unexpected Lessons from Daily Life</h3>
+            <p>Everyday moments are full of wonder. A child’s laughter or a bird’s call can teach deep lessons if we observe closely.</p>
+          </div>
+          <div class="blog-post">
+            <img src="https://www.mindchirps.com/image/1698842123.jpg" alt="Blog Image">
+            <h3>5 Tamil Movies You Must Watch</h3>
+            <p>These films are more than entertainment. They speak of society, love, and human struggles in raw and beautiful ways.</p>
+          </div>
+          <div class="text-center">
+            <a href="?page=1" class="btn btn-outline-dark">← Previous</a>
+            <a href="?page=3" class="btn btn-outline-dark">Next →</a>
+          </div>
         </div>
       </div>
-
-      <!-- Sidebar -->
       <div class="col-md-4">
-        <div class="sidebar-section">
-          <h4>About</h4>
-          <p>MindChirps is a place to reflect on books, movies, and thoughts. This is a static clone made by Prasanth for practice.</p>
-        </div>
+        <div class="content sidebar">
+          <h5>About</h5>
+          <p>Hi, I’m Sammy! This is my space to share thoughts, reviews, and moments from life’s lab. LIFE = Laboratory with Infinite Freedom to Experiment.</p>
 
-        <div class="sidebar-section">
-          <h4>Categories</h4>
-          <ul>
+          <h5>Newsletter</h5>
+          <p>Subscribe to get updates on new blog posts directly to your inbox.</p>
+          <input type="email" class="form-control mb-2" placeholder="Your email">
+          <button class="btn btn-primary btn-block">Subscribe</button>
+
+          <h5>Categories</h5>
+          <ul class="list-unstyled">
             <li><a href="#">Books</a></li>
             <li><a href="#">Movies</a></li>
-            <li><a href="#">Parenting</a></li>
-            <li><a href="#">Self Help</a></li>
-          </ul>
-        </div>
-
-        <div class="sidebar-section">
-          <h4>Tags</h4>
-          <ul>
-            <li><a href="#">Inspiration</a></li>
-            <li><a href="#">Motivation</a></li>
-            <li><a href="#">Story</a></li>
             <li><a href="#">Life</a></li>
-            <li><a href="#">Animals</a></li>
+            <li><a href="#">Experiments</a></li>
+            <li><a href="#">Random</a></li>
           </ul>
+
+          <h5>Tags</h5>
+          <div>
+            <span class="tag">#Love</span>
+            <span class="tag">#Books</span>
+            <span class="tag">#Movies</span>
+            <span class="tag">#Life</span>
+            <span class="tag">#Joy</span>
+            <span class="tag">#Nature</span>
+          </div>
         </div>
       </div>
     </div>
-
-    <!-- Footer -->
-    <footer>
-      <p>&copy; 2025 – MindChirps Clone | Created by Prasanth</p>
-    </footer>
   </div>
+  <footer class="footer text-center">
+    <div class="container">
+      <p>© 2025 Sammy’s MindChirps Clone | Created for learning purpose</p>
+    </div>
+  </footer>
 </body>
 </html>
